  
  Added new icons to system, and made sure all core modules had an icon associated with them in the Admin Console.
  
  Changed the way we denote that we are NOT overriding a core variable.  Instead of deleting from table, we mark it as 'no'
  
  Added multi-school functionality to audit settings.
  
  Added multi-school functionality to course search settings.
  

2021-08-03
  Added new variable_delete() function to db.inc.
  
  Added new variable_exists() function to db.inc.  Returns TRUE or FALSE if the variable is even in the variables table.
  
  Changed schools module to let us override default school settings on a *per field* level.
  
  Modified how variable_get_for_school() checks to see if we are overriding the default school's val.
  
  Modified admin's edit-advising-settings to handle multiple schools.
  
  Fixed bug where db's update_course_requirement_by_name was trying to use school_id in tables which didn't have it.


2021-08-02
  Added new menu type:  MENU_TYPE_DEFAULT_TAB. This is a tab which otherwise behaves like a MENU_TYPE_NORMAL_ITEM.
  
  Added new page_setting to menu router api:  $item['page_settings']['tab_title'] = "blah". This is an optional special string
  used just for the tab of a page, separate from it's regular title.
  
  Replaced calls to GLOBALS['fp_system_settings'] array with variable_get() where appropriate.  Cleaned up unused functions.
  
  Added school column to output for student search of advisees.
  
  Added ability to specify optgroups for options in select lists in the Form API.
  
  Added ability to search for majors within a school (if user is allowed) on the student search screen.
  
  Modified course_search to let you search by school, if schools module is enabled.
  
  Fixed bug in course_search where it was not uploading syllabi correctly.  Also shortened filename of uploaded
  syllabi to a more reasonable length.
  
  Added "school" column to the list of courses you can edit from course_search module. 
  